- fix line number count for articles 1, 2, 3 and the new article - fix text and line number alignment for articles 2, 3 and new - fix scrollbar height and width for articles 2, 3 and new

--- a/css/article-2.css
+++ b/css/article-2.css
@@ -212,6 +212,7 @@ body {
 
 body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
+    width: 14px;
 }
 
 .container {
@@ -298,12 +299,12 @@ body::-webkit-scrollbar {
 
 img {
     max-width: 100%;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.7rem;
     cursor: zoom-in;
 }
 
 .article-subheading {
-    padding: 1rem 0 1.5rem;
+    padding: 1.5rem 0;
     font-size: 1.25rem;
     font-weight: 700;
 }
@@ -344,7 +345,7 @@ code {
 blockquote {
     display: flex;
     overflow: hidden;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 blockquote p {
@@ -363,7 +364,7 @@ blockquote::before {
     margin-right: 1rem;
 }
 .img-standard {
-    padding: 0.6rem 0;
+    padding: 0.5rem 0 1rem;
     background-color: var(--background-color);
 }
 
